// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthTokenPresenter creates presenter with defaults 1`] = `
Object {
  "accessKey": "",
  "userId": "",
}
`;

exports[`AuthTokenPresenter update access key 1`] = `
Object {
  "accessKey": "zzzzzz",
  "userId": "",
}
`;

exports[`AuthTokenPresenter update user id 1`] = `
Object {
  "accessKey": "",
  "userId": "dfdfdf",
}
`;

exports[`AuthTokenPresenter updates token 1`] = `
Object {
  "accessKey": "zzzzzz",
  "userId": "dfdfdf",
}
`;
